k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metrics-api
  labels:
    name: metrics-api
